# youtube-bootlegger

./: AGENTS.md  main.py  main_qml.py  pyproject.toml  pysidedeploy.spec
src/youtube_bootlegger/: __init__.py  app.py  app_qml.py  qml_backend.py
src/youtube_bootlegger/core/: __init__.py  downloader.py  exceptions.py  parser.py  pipeline.py  splitter.py  tagger.py  template_parser.py  video_info.py
src/youtube_bootlegger/models/: __init__.py  job.py  track.py
src/youtube_bootlegger/qml/: Main.qml  ProgressPanel.qml  TracklistPanel.qml  VideoPreview.qml
src/youtube_bootlegger/qml_backend/: __init__.py  backend.py  models.py
src/youtube_bootlegger/ui/: __init__.py  main_window.py  theme.py
src/youtube_bootlegger/ui/widgets/: __init__.py  directory_picker.py  metadata_input.py  progress_panel.py  tracklist_input.py  url_input.py  video_preview.py
src/youtube_bootlegger/utils/: __init__.py  ffmpeg_check.py  time_utils.py  validators.py
src/youtube_bootlegger/workers/: __init__.py  pipeline_worker.py  signals.py  video_info_worker.py
tests/: __init__.py  test_tagger.py  test_template_parser.py
