[project]
name = "youtube-bootlegger"
version = "0.1.0"
description = "Download and split YouTube live performance audio into individual song files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "pyside6>=6.10.2",
    "yt-dlp>=2026.2.21",
]

[project.scripts]
youtube-bootlegger = "youtube_bootlegger.app:run"

[dependency-groups]
dev = [
    "nuitka>=4.0.1",
    "pip>=26.0.1",
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
